--- a/app/src/main/res/layout/fragment_launch_quiz.xml
+++ b/app/src/main/res/layout/fragment_launch_quiz.xml
@@ -1,13 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LaunchQuizFragment">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="LAUNCH QUIZ FRAGMENT" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/launchQuizButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Start Quiz"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/launchTimedQuizButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Start Timed Quiz"
+        app:layout_constraintEnd_toEndOf="@+id/launchQuizButton"
+        app:layout_constraintStart_toStartOf="@+id/launchQuizButton"
+        app:layout_constraintTop_toBottomOf="@+id/launchQuizButton" />
+
+</android.support.constraint.ConstraintLayout>
