--- a/app/src/main/res/layout/fragment_study_add.xml
+++ b/app/src/main/res/layout/fragment_study_add.xml
@@ -7,16 +7,87 @@
     tools:context=".StudyAddFragment">
 
     <TextView
+        android:id="@+id/database_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="DATABASE"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/database_textview"
+        app:layout_constraintStart_toStartOf="@+id/database_textview"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
         android:id="@+id/database_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:background="@android:color/holo_orange_light"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/database_title" />
+
+    <!--         app:layout_constraintBottom_toTopOf="@+id/new_entry" -->
+    <!--
+    <TextView
+        android:id="@+id/new_entry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="8dp"
+        android:text="NEW DATABASE ENTRY"
+      app:layout_constraintBottom_toTopOf="@+id/name_editText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/database_textview" />
+
+   <EditText
+        android:id="@+id/name_editText"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:hint="Name"
+        app:layout_constraintBottom_toTopOf="@+id/category_editText"
+        app:layout_constraintStart_toStartOf="@+id/new_entry"
+        app:layout_constraintTop_toBottomOf="@+id/new_entry" />
+
+    <EditText
+        android:id="@+id/category_editText"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:hint="Category"
+        app:layout_constraintBottom_toTopOf="@+id/birthYear_editText"
+        app:layout_constraintStart_toStartOf="@+id/name_editText"
+        app:layout_constraintTop_toBottomOf="@+id/name_editText" />
+
+    <EditText
+        android:id="@+id/birthYear_editText"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:hint="BirthYear"
+        app:layout_constraintBottom_toTopOf="@+id/submit_button"
+        app:layout_constraintStart_toStartOf="@+id/category_editText"
+        app:layout_constraintTop_toBottomOf="@+id/category_editText" />
+
+    <Button
+        android:id="@+id/submit_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:text="SUBMIT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" /> -->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
