--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,11 @@
         android:id="@+id/questionFragment"
         android:name="com.flamingo.wikiquiz.QuestionFragment"
         android:label="fragment_question"
-        tools:layout="@layout/fragment_question" />
+        tools:layout="@layout/fragment_question">
+        <action
+            android:id="@+id/action_questionFragment_to_endQuizFragment"
+            app:destination="@id/endQuizFragment" />
+    </fragment>
     <fragment
         android:id="@+id/statsFragment"
         android:name="com.flamingo.wikiquiz.StatsFragment"
@@ -33,4 +37,9 @@
             android:id="@+id/action_launchQuizFragment_to_questionFragment"
             app:destination="@id/questionFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/endQuizFragment"
+        android:name="com.flamingo.wikiquiz.EndQuizFragment"
+        android:label="fragment_end_quiz"
+        tools:layout="@layout/fragment_end_quiz" />
 </navigation>
