--- a/app/src/main/res/layout/fragment_end_quiz.xml
+++ b/app/src/main/res/layout/fragment_end_quiz.xml
@@ -1,12 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/scoreDisplay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="END F THE QUIZJAJFAHJAFJL"/>
+        android:layout_height="wrap_content"
+        android:text="End of the quiz"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/restartQuizButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/restartQuizButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Choose new quiz"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scoreDisplay" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
