--- a/app/src/main/res/layout/fragment_launch_quiz.xml
+++ b/app/src/main/res/layout/fragment_launch_quiz.xml
@@ -7,12 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".LaunchQuizFragment">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="LAUNCH QUIZ FRAGMENT" />
-
     <Button
         android:id="@+id/launchQuizButton"
         android:layout_width="150dp"
@@ -22,9 +16,9 @@
         android:layout_marginBottom="8dp"
         android:text="Start Quiz"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/launchTimedQuizButton"
