--- a/app/src/main/res/layout/fragment_study_add.xml
+++ b/app/src/main/res/layout/fragment_study_add.xml
@@ -13,20 +13,22 @@
         android:layout_marginTop="16dp"
         android:text="DATABASE"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/database_textview"
-        app:layout_constraintStart_toStartOf="@+id/database_textview"
+        app:layout_constraintEnd_toEndOf="@+id/database_recyclerview"
+        app:layout_constraintStart_toStartOf="@+id/database_recyclerview"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:id="@+id/database_textview"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/database_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="64dp"
         android:background="@android:color/holo_orange_light"
-        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/database_title" />
