--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,6 +36,9 @@
         <action
             android:id="@+id/action_launchQuizFragment_to_questionFragment"
             app:destination="@id/questionFragment" />
+        <action
+            android:id="@+id/action_launchQuizFragment_to_multiplayerFragment"
+            app:destination="@id/launchMultiplayerFragment" />
     </fragment>
     <fragment
         android:id="@+id/endQuizFragment"
@@ -49,5 +52,11 @@
             android:name="score"
             app:argType="integer"
             android:defaultValue="0" />
+    </fragment>
+    <fragment
+        android:id="@+id/launchMultiplayerFragment"
+        android:name="com.flamingo.wikiquiz.LaunchMultiplayerFragment"
+        android:label="fragment_launch_multiplayer"
+        tools:layout="@layout/fragment_launch_multiplayer">
     </fragment>
 </navigation>
