--- a/app/src/main/res/layout/fragment_launch_multiplayer.xml
+++ b/app/src/main/res/layout/fragment_launch_multiplayer.xml
@@ -31,4 +31,20 @@
         app:layout_constraintEnd_toEndOf="@+id/hostSession"
         app:layout_constraintStart_toStartOf="@+id/hostSession"
         app:layout_constraintTop_toBottomOf="@+id/hostSession" />
+
+    <ListView
+        android:id="@+id/devicesListView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/joinSession"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:choiceMode="singleChoice"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/joinSession" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
