--- a/app/src/main/res/layout/fragment_launch_quiz.xml
+++ b/app/src/main/res/layout/fragment_launch_quiz.xml
@@ -17,6 +17,21 @@
          app:layout_constraintTop_toBottomOf="@id/launchGuideline1" /> -->
 
     <TextView
+        android:id="@+id/QuizFragmentBigTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Quizzes"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/launchGuideline1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
         android:id="@+id/titleQuizSP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -169,5 +184,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.36" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
